package main;

public interface Point {

	public double getX();

	public double getY();

	public double getZ();
}
